Add author and edit names / dates to src files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
+<!-- 
+    Created by: Jean-Marie Alder on 9 November 2023
+    Updated by: Leyla Kandé on 9 November 2023
+-->
+
 <app-realtime-data></app-realtime-data>
 <router-outlet></router-outlet>
