--- a/src/app/realtime-data/realtime-data.component.html
+++ b/src/app/realtime-data/realtime-data.component.html
@@ -1,3 +1,8 @@
+<!-- 
+    Created by: Leyla Kandé on 9 November 2023
+    Updated by: Leyla Kandé on 9 November 2023
+-->
+
 <h1>Sensor Data</h1>
 <tr *ngFor="let key of Object.keys(thingyData)">
     <h3>ID: {{ key }}</h3>
