show realtime thingy data per plant (dummy plant)

--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -3,4 +3,4 @@
     Updated by: Leyla Kandé on 9 November 2023
 -->
 
-<p>plant-detail works!</p>
+<app-realtime-data [plantThingyID]="thingyID"> </app-realtime-data>
