Add and modify plant form TG-55 #closed TG-56 #closed TG-52 #done

--- a/src/app/plant-list/plant-list.component.css
+++ b/src/app/plant-list/plant-list.component.css
@@ -2,3 +2,8 @@
 Created by: Leyla Kandé on 9 November 2023
 Updated by:  
 */
+.add-button {
+    text-decoration: inherit;
+    color: inherit;
+    cursor: auto;
+}
