--- a/src/app/plant-list/plant-list.component.html
+++ b/src/app/plant-list/plant-list.component.html
@@ -1,6 +1,6 @@
 <!-- 
     Created by: Leyla Kandé on 9 November 2023
-    Updated by: Leyla Kandé on 9 November 2023
+    Updated by: Jean-Marie Alder on 13 November 2023
 -->
 
 <h1>Solar plant monitoring solution</h1>
@@ -9,3 +9,5 @@
     <a [routerLink]="['/detail', plant.value.id]">{{ plant.key }}</a>
   </li>
 </ul>
+
+<button><a class="add-button" href="plant/add">Add Plant</a></button>
