--- a/src/app/plant-add/plant-add.component.html
+++ b/src/app/plant-add/plant-add.component.html
@@ -1,1 +1,6 @@
-<app-plant-form [editMode]=false></app-plant-form>
+<div>
+    <h1>Add Plant</h1>
+</div>
+<div>
+    <app-plant-form [editMode]=false></app-plant-form>
+</div>
