--- a/src/app/plant-modify/plant-modify.component.html
+++ b/src/app/plant-modify/plant-modify.component.html
@@ -1,1 +1,6 @@
-<app-plant-form [editMode]=true [plantId]="plantId"></app-plant-form>
+<div>
+    <h1>Manage Plant</h1>
+</div>
+<div>
+    <app-plant-form [editMode]=true [plantId]="plantId"></app-plant-form>
+</div>
