feature/history-data-graph

--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -6,3 +6,4 @@
 <h2>{{ plantData.friendly_name }}</h2>
 
 <app-realtime-data [plantThingyID]="plantData.thingy_id"> </app-realtime-data>
+<app-historical-data [plantThingyID]="plantData.thingy_id"></app-historical-data>
