--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -1,9 +1,9 @@
 <!-- 
     Created by: Leyla Kandé on 9 November 2023
-    Updated by: Leyla Kandé on 27 November 2023
+    Updated by: Leyla Kandé on 29 November 2023
 -->
 <h1>Solar plant monitoring solution</h1>
 <h2>{{ plantData.friendly_name }}</h2>
 
-<app-realtime-data [plantThingyID]="plantData.thingy_id"> </app-realtime-data>
-<app-historical-data [plantThingyID]="plantData.thingy_id"></app-historical-data>
+<app-realtime-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"> </app-realtime-data>
+<app-historical-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-historical-data>
