--- a/src/app/historical-data/historical-data.component.css
+++ b/src/app/historical-data/historical-data.component.css
@@ -7,7 +7,6 @@
 /* Style the canvas element */
 #historyChart {
     width: 100%;
-    max-width: 1200px;
     height: 400px;
     margin: 20px 0;
     border: 1px solid #ddd;
@@ -44,3 +43,44 @@
     height: 20px;
     margin-right: 5px;
 }
+
+
+.chart-controls {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .btn-group {
+    display: flex;
+  }
+  
+  .btn {
+    padding: 8px 16px;
+    margin-right: 5px;
+    background-color: #3498db;
+    color: #fff;
+    border: 1px solid #2980b9;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .btn:hover {
+    background-color: #2980b9;
+  }
+  
+  .btn.active {
+    background-color: #2c3e50;
+  }
+
+  .loading-label {
+    font-size: 14px;
+    color: #333;
+    font-weight: bold;
+  }
+
+  canvas {
+    width: 100%;
+    height: 100%;
+  }
