--- a/src/app/realtime-data/realtime-data.component.html
+++ b/src/app/realtime-data/realtime-data.component.html
@@ -2,11 +2,13 @@
     Created by: Leyla Kandé on 9 November 2023
     Updated by: Leyla Kandé on 27 November 2023
 -->
+<div class="realtime-container">
+    <h3>Sensor: {{ plantThingyID }}</h3>
 
-<h3>Sensor: {{ plantThingyID }}</h3>
+    <ul>
+        <li>Humidity: {{ thingyData[plantThingyID]?.humidity || '' }}</li>
+        <li>Pressure: {{ thingyData[plantThingyID]?.pressure || '' }}</li>
+        <li>Light: {{ thingyData[plantThingyID]?.light || '' }}</li>
+    </ul>
+</div>
 
-<ul>
-    <li>Humidity: {{ thingyData[plantThingyID]?.humidity || '' }}</li>
-    <li>Pressure: {{ thingyData[plantThingyID]?.pressure || '' }}</li>
-    <li>Light: {{ thingyData[plantThingyID]?.light || '' }}</li>
-</ul>
