Application header and map adaptation TG-64 #closed TG-45 #done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
     Created by: Jean-Marie Alder on 9 November 2023
     Updated by: Leyla Kandé on 9 November 2023
 -->
-
+<app-header></app-header>
 <router-outlet></router-outlet>
