--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,9 +1,12 @@
-#map {
-  height: 98vh; /* Use 100% of the viewport height */
-  width: 100%;   /* Use 100% of the container width */
+#map-container {
+  height: calc(96.5vh - 2rem); /* 2rem is an example header height; adjust as needed */
+  width: 100%;
 }
 
-
+#map {
+  height: 100%;
+  width: 100%;
+}
 
 .leaflet-popup-content-wrapper {
   text-align: center;
