--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -4,7 +4,7 @@
 -->
 <h1>{{ plantData.friendly_name }}</h1>
 <div class="plant-detail-content">
-    <app-maintenance-mode  *ngIf="isDataLoaded" [plantID]="plantData.id"></app-maintenance-mode>
+    <app-maintenance-mode  *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-maintenance-mode>
     <app-plant-info *ngIf="isDataLoaded" [plantData]="plantData"></app-plant-info>
     <app-realtime-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"> </app-realtime-data>
     <app-historical-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-historical-data>
