Squashed commit of the following:
commit 8aace262391903c3c54616511a0fbd9f5ea0cde4
Author: Jean-Marie Alder <jeanmarie.alder@gmail.com>
Date:   Wed Dec 20 00:39:40 2023 +0100

    TG adapt colors according to cloud cover (weather) TG-24 #closed TG-6 #done

commit 5dbf22e1d8c7d0b3cf415930b1fc5c407decf8bc
Author: Jean-Marie Alder <jeanmarie.alder@gmail.com>
Date:   Wed Dec 20 00:38:12 2023 +0100

    adapt colors according to cloud cover (weather) TG-24 #done TG-6 #closed

commit d897fb18b8aa849fc713c18c0a0d883d91ea3488
Author: Jean-Marie Alder <jeanmarie.alder@gmail.com>
Date:   Wed Dec 20 00:33:50 2023 +0100

    Weather info on the details page

--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -1,12 +1,18 @@
 <!-- 
     Created by: Leyla Kandé on 9 November 2023
-    Updated by: Leyla Kandé on 29 November 2023
+    Updated by: JMA on 19 Dec 2023
 -->
 <h1>{{ plantData.friendly_name }}</h1>
+<app-maintenance-mode *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-maintenance-mode>
 <div class="plant-detail-content">
-    <app-maintenance-mode  *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-maintenance-mode>
-    <app-plant-info *ngIf="isDataLoaded" [plantData]="plantData"></app-plant-info>
+    <div class="info-container">
+        <div class="plant-info-wrapper">
+            <app-plant-info *ngIf="isDataLoaded" [plantData]="plantData"></app-plant-info>
+        </div>
+        <div class="weather-info-wrapper">
+            <app-plant-weather-info *ngIf="isDataLoaded" [plantId]="plantData.id"></app-plant-weather-info>
+        </div>
+    </div>
     <app-realtime-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"> </app-realtime-data>
     <app-historical-data *ngIf="isDataLoaded" [plantThingyID]="plantData.thingy_id"></app-historical-data>
 </div>
-
