--- a/src/app/plant-weather-info/plant-weather-info.component.css
+++ b/src/app/plant-weather-info/plant-weather-info.component.css
@@ -1,15 +1,13 @@
 .weather-card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
     padding: 10px;
     display: inline-block;
     align-items: center;
 }
 
 .weather-icon {
-    width: 50px; /* Adjust the size as needed */
-    height: 50px; /* Adjust the size as needed */
-    margin-right: 10px;
+    width: 100pxx; /* Adjust the size as needed */
+    height: 100px; /* Adjust the size as needed */
+    margin: 10px;
 }
 
 .weather-details {
